k8s/clusters/infra-k8s-01/flux-system/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-webhook
spec:
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9292
